# HIDPP_Bat_Mon

./: CMakeLists.txt
include/: HIDDevice.hpp  HIDPPMsg.hpp  LogiDevice.hpp  MapWrapper.hpp  WebsocketServer.hpp  hid_api_debug.hpp
src/: CMakeProject1.cpp  HIDDevice.cpp  LogiDevice.cpp  MapWrapper.cpp  WebsocketServer.cpp  hid_api_debug.cpp
